basic desgin of topics view

--- a/RubyChina-for-IOS/en.lproj/MainStoryboard.storyboard
+++ b/RubyChina-for-IOS/en.lproj/MainStoryboard.storyboard
@@ -37,6 +37,14 @@
             <point key="canvasLocation" x="-198" y="-908"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="LoginController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginController.h"/>
+        </class>
+        <class className="TopicsController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopicsController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
