--- a/RubyChina-for-IOS/en.lproj/MainStoryboard.storyboard
+++ b/RubyChina-for-IOS/en.lproj/MainStoryboard.storyboard
@@ -36,7 +36,7 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <connections>
-                                    <segue destination="S9m-1S-uPN" kind="push" id="z7y-nc-RFq"/>
+                                    <segue destination="FiA-Hy-4lm" kind="push" id="ttn-2B-FRL"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -51,20 +51,35 @@
             </objects>
             <point key="canvasLocation" x="-394" y="-488"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="pPZ-iP-7jf">
+        <!--Topic Controller-->
+        <scene sceneID="7kf-gd-1aa">
             <objects>
-                <viewController id="S9m-1S-uPN" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="o3e-tT-ZZP">
+                <tableViewController id="FiA-Hy-4lm" customClass="TopicController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="uFE-Yv-65h">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="HkX-kf-Hug"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1ax-Sa-U4e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="K9f-ww-fQn">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="FiA-Hy-4lm" id="rhe-K7-p2V"/>
+                            <outlet property="delegate" destination="FiA-Hy-4lm" id="72h-W9-FxY"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="TJe-j7-9dg"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VGa-9D-7GU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="26" y="-488"/>
+            <point key="canvasLocation" x="-32" y="-488"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="r6G-8r-f8K">
@@ -88,6 +103,9 @@
     <classes>
         <class className="LoginController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginController.h"/>
+        </class>
+        <class className="TopicController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopicController.h"/>
         </class>
         <class className="TopicsCell" superclassName="UITableViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TopicsCell.h"/>
