--- a/RubyChina-for-IOS/en.lproj/MainStoryboard.storyboard
+++ b/RubyChina-for-IOS/en.lproj/MainStoryboard.storyboard
@@ -12,22 +12,22 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ScC-kx-Yfc">
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hFP-zP-DEQ">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ScC-kx-Yfc" firstAttribute="leading" secondItem="EAj-UB-eZH" secondAttribute="leading" type="default" id="JDM-O0-lRx"/>
-                            <constraint firstItem="ScC-kx-Yfc" firstAttribute="trailing" secondItem="EAj-UB-eZH" secondAttribute="trailing" type="default" id="Mmr-LP-ixg"/>
-                            <constraint firstItem="ScC-kx-Yfc" firstAttribute="top" secondItem="EAj-UB-eZH" secondAttribute="top" type="default" id="N7J-qq-kWa"/>
-                            <constraint firstItem="ScC-kx-Yfc" firstAttribute="bottom" secondItem="EAj-UB-eZH" secondAttribute="bottom" type="default" id="RGq-tn-vUW"/>
+                            <constraint firstItem="hFP-zP-DEQ" firstAttribute="leading" secondItem="EAj-UB-eZH" secondAttribute="leading" type="default" id="7M2-4g-LmV"/>
+                            <constraint firstItem="hFP-zP-DEQ" firstAttribute="trailing" secondItem="EAj-UB-eZH" secondAttribute="trailing" type="default" id="9kn-Jj-ewk"/>
+                            <constraint firstItem="hFP-zP-DEQ" firstAttribute="top" secondItem="EAj-UB-eZH" secondAttribute="top" type="default" id="FBS-xe-ght"/>
+                            <constraint firstItem="hFP-zP-DEQ" firstAttribute="bottom" secondItem="EAj-UB-eZH" secondAttribute="bottom" type="default" id="SXd-j6-3W1"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qg8-Ek-tTO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-253" y="-206"/>
+            <point key="canvasLocation" x="-386" y="-272"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
