--- a/RubyChina-for-IOS/en.lproj/MainStoryboard.storyboard
+++ b/RubyChina-for-IOS/en.lproj/MainStoryboard.storyboard
@@ -14,6 +14,9 @@
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hFP-zP-DEQ">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="delegate" destination="g6H-rC-wIq" id="sJV-mm-90j"/>
+                                </connections>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -24,12 +27,26 @@
                             <constraint firstItem="hFP-zP-DEQ" firstAttribute="bottom" secondItem="EAj-UB-eZH" secondAttribute="bottom" type="default" id="SXd-j6-3W1"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="webView" destination="hFP-zP-DEQ" id="c6R-UK-UOa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qg8-Ek-tTO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-386" y="-272"/>
+            <point key="canvasLocation" x="-77" y="-80"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="WebViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WebViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
