--- a/RubyChina-for-IOS/en.lproj/MainStoryboard.storyboard
+++ b/RubyChina-for-IOS/en.lproj/MainStoryboard.storyboard
@@ -1,52 +1,58 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="g6H-rC-wIq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="sJc-jG-EnS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--Web View Controller-->
-        <scene sceneID="nJm-Tz-VUv">
+        <!--Table View Controller-->
+        <scene sceneID="318-S6-2lQ">
             <objects>
-                <viewController id="g6H-rC-wIq" customClass="WebViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="EAj-UB-eZH">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hFP-zP-DEQ">
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <outlet property="delegate" destination="g6H-rC-wIq" id="sJV-mm-90j"/>
-                                </connections>
-                            </webView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="hFP-zP-DEQ" firstAttribute="leading" secondItem="EAj-UB-eZH" secondAttribute="leading" type="default" id="7M2-4g-LmV"/>
-                            <constraint firstItem="hFP-zP-DEQ" firstAttribute="trailing" secondItem="EAj-UB-eZH" secondAttribute="trailing" type="default" id="9kn-Jj-ewk"/>
-                            <constraint firstItem="hFP-zP-DEQ" firstAttribute="top" secondItem="EAj-UB-eZH" secondAttribute="top" type="default" id="FBS-xe-ght"/>
-                            <constraint firstItem="hFP-zP-DEQ" firstAttribute="bottom" secondItem="EAj-UB-eZH" secondAttribute="bottom" type="default" id="SXd-j6-3W1"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="webView" destination="hFP-zP-DEQ" id="c6R-UK-UOa"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qg8-Ek-tTO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="W8q-2y-sO2" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="VCs-B2-9e2">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="ZQa-wY-CvI">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="W8q-2y-sO2" id="Vc8-ad-euF"/>
+                            <outlet property="delegate" destination="W8q-2y-sO2" id="7K2-Pp-mIa"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="Yq5-r3-Vyl"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gJz-bS-hmL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-77" y="-80"/>
+            <point key="canvasLocation" x="-206" y="108"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="3IE-5Y-Yi6">
+            <objects>
+                <navigationController id="sJc-jG-EnS" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IBe-LE-Qcl">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="W8q-2y-sO2" kind="relationship" relationship="rootViewController" id="BPX-Gd-KdY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OyS-Yz-3fG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-680" y="108"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="WebViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WebViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
