--- a/RubyChina-for-IOS/en.lproj/MainStoryboard.storyboard
+++ b/RubyChina-for-IOS/en.lproj/MainStoryboard.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Topics Controller-->
         <scene sceneID="318-S6-2lQ">
             <objects>
-                <tableViewController id="W8q-2y-sO2" sceneMemberID="viewController">
+                <tableViewController id="W8q-2y-sO2" customClass="TopicsController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="VCs-B2-9e2">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -32,7 +32,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gJz-bS-hmL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-206" y="108"/>
+            <point key="canvasLocation" x="-338" y="-414"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="3IE-5Y-Yi6">
@@ -50,9 +50,14 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OyS-Yz-3fG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-680" y="108"/>
+            <point key="canvasLocation" x="-762" y="-414"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="TopicsController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopicsController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
