--- a/Ruby-China-iOS/Ruby-China-iOS/Base.lproj/Main.storyboard
+++ b/Ruby-China-iOS/Ruby-China-iOS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="s7E-QY-xdO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ftW-rP-U36">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
@@ -23,51 +23,51 @@
             <point key="canvasLocation" x="-70" y="-165"/>
         </scene>
         <!--Topics Controller-->
-        <scene sceneID="ZXR-i0-Kzp">
+        <scene sceneID="7P4-fy-9Pb">
             <objects>
-                <tableViewController id="No4-Dd-6hf" customClass="TopicsController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="72Y-Mi-Lp3">
+                <tableViewController id="j1N-6o-Evo" customClass="TopicsController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="8Qn-rA-DbZ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="5U3-Nv-Ccu">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="pJw-Kh-84o">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5U3-Nv-Ccu" id="X41-wf-wMb">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pJw-Kh-84o" id="dw2-lT-ulV">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="No4-Dd-6hf" id="xo7-Mc-wvI"/>
-                            <outlet property="delegate" destination="No4-Dd-6hf" id="lfk-7k-9HL"/>
+                            <outlet property="dataSource" destination="j1N-6o-Evo" id="Z86-hh-IOZ"/>
+                            <outlet property="delegate" destination="j1N-6o-Evo" id="Cfu-73-kFq"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="sdk-bP-HgT"/>
+                    <navigationItem key="navigationItem" id="MKB-XD-ljE"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aax-Ya-Y7A" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RY4-a7-BX5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="916" y="-165"/>
+            <point key="canvasLocation" x="1226" y="-165"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="YrK-Ec-hF0">
+        <scene sceneID="Mh0-mx-dQX">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="s7E-QY-xdO" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ftW-rP-U36" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Zi2-7s-NhK">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0l7-mF-7lc">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="No4-Dd-6hf" kind="relationship" relationship="rootViewController" id="IL2-4n-lEM"/>
+                        <segue destination="j1N-6o-Evo" kind="relationship" relationship="rootViewController" id="V3L-wz-wyD"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ov1-4B-dax" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rbe-3x-sx1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="390" y="-165"/>
+            <point key="canvasLocation" x="700" y="-165"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
